<resources>
    <string name="app_name">Easy Cast</string>
    <string name="cast_receiver_app_id">CC1AD845</string>
    <string name="search_hint">Search devices</string>
    <string name="scan_devices">Scan for Devices</string>
    <string name="open_cast_chooser">Open Cast Chooser</string>
    <string name="no_devices">No Cast devices found yet.</string>
    <string name="same_wifi">Only devices accessible on the current Wi-Fi network are shown.</string>
    <string name="wifi_required">Turn on Wi-Fi and connect to the same network as the Cast device to scan.</string>
    <string name="searching">Searching for Cast devices on current Wi-Fi…</string>
    <string name="connected_to">Connected to: %1$s</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="not_connected">Not connected to any device.</string>
    <string name="permission_required">Please grant permission to find nearby devices.</string>
    <string name="disconnect">Disconnect</string>
    <string name="video_url_hint">Enter video URL to cast</string>
    <string name="cast_video">Cast Video</string>
    <string name="invalid_url">Please enter a valid video URL.</string>
    <string name="no_device_selected">Please select a Cast device first.</string>
    <string name="casting_video">Casting video to: %1$s</string>
    <string name="cast_failed">Failed to cast video: %1$s</string>
    <string name="cast_loading">Loading video on %1$s…</string>
    <string name="cast_unsupported_format">Unsupported video format or stream type. Try a direct MP4 link.</string>
    <string name="cast_unknown_error">An unknown error occurred during casting.</string>
    <string name="local_video">Local Video</string>
    <string name="select_video_file">Select a video file</string>
    <string name="cast_photo">Cast Photo</string>
    <string name="select_photo_file">Select a photo</string>
    <string name="cast_music">Cast Music</string>
    <string name="mirror_cast">Mirror Screen</string>
    <string name="mirror_permission_denied">Screen recording permission was denied</string>
    <string name="mirror_starting">Starting screen mirror…</string>
    <string name="mirror_active">Mirroring to %1$s</string>
    <string name="mirror_stopped">Screen mirror stopped</string>
    <string name="select_music_file">Select a music file</string>
    <string name="language_selection">Select Language</string>
    <string name="theme_selection">Select Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System Default</string>
    <string name="theme_custom">Custom</string>
    <string name="theme_custom_hint">Pick a photo from your gallery to use as the app background.</string>
    <string name="connecting_device">Connecting…</string>
    <string name="accent_color_selection">Accent Color</string>
    <string name="settings_title">Settings</string>
    <string name="settings_button">Settings</string>
    <string name="sleep_timer_title">Sleep Timer</string>
    <string name="sleep_timer_off">Off</string>
    <string name="sleep_timer_cancel">Cancel</string>
    <string name="sleep_timer_active">Playback stops in %1$d min</string>
    <string name="sleep_timer_finished">Sleep timer stopped playback</string>
    <string name="playlist_button">Playlist</string>
    <string name="playlist_coming_soon">Coming soon: auto-playlist and slideshow</string>
    <string name="playlist_started">Playlist started: %1$d items</string>
    <string name="playlist_finished">Playlist finished</string>
    <string name="support_button">Support</string>
    <string name="support_message">For support, please email Newlifetech25@hotmail.com.</string>
    <string name="support_email_option">Email Support</string>
    <string name="support_privacy_option">Privacy Policy</string>
    <string name="casting_notification_title">Casting local video</string>
    <string name="casting_notification_text">Keeping Wi-Fi and CPU awake so playback doesn\'t freeze when the screen locks.</string>
    <string name="now_playing">Now Playing</string>
    <string name="playing_on">Playing on: %1$s</string>
    <string name="volume_control">Volume</string>
    <string name="cast_from">Cast From</string>
    <string name="available_devices">Available Devices</string>
    <string name="dlna_device_label">DLNA Device</string>
    <string name="select_device_button">Select Device</string>
    <string name="select_device_title">Select a Device</string>
    <string name="content_desc_play">Play</string>
    <string name="content_desc_pause">Pause</string>
    <string name="content_desc_rewind">Rewind 10 seconds</string>
    <string name="content_desc_forward">Forward 10 seconds</string>
    <string name="playlist_add_music_title">Add music too?</string>
    <string name="playlist_add_music_message">You can add music tracks to play as part of this playlist too.</string>
    <string name="playlist_add_music_yes">Add music</string>
    <string name="playlist_add_music_no">Skip</string>
    <string name="ad_placeholder_text">Ad space</string>
    <string name="cast_from_url_header">Cast from a link</string>
</resources>
